# live-timing-strategy

./: .editorconfig  .gitignore  README.md
lts-api/: .coveragerc  .env  .env.indocker  .env.local  Dockerfile  README.md  config.json  pyproject.toml  tox.ini
lts-api/data/: Live Timing.postman_collection.json  init.sql  postman.json  sample.sql  schema.sql
lts-api/src/: test_connection.py
lts-api/src/ltsapi/: __init__.py  db.py  exceptions.py  main.py
lts-api/src/ltsapi/managers/: auth.py  competitions.py  parsers.py  participants.py  pits.py  strategy.py  timing.py  tracks.py
lts-api/src/ltsapi/models/: __init__.py  auth.py  competitions.py  enum.py  filters.py  health.py  parsers.py  participants.py  pits.py  responses.py  strategy.py  timing.py  tracks.py
lts-api/src/ltsapi/router/: __init__.py  auth.py  competitions.py  misc.py  participants.py  pits.py  strategy.py  timing.py  tracks.py
lts-api/tests/: fixtures.py  helpers.py
lts-api/tests/ltsapi/: test_sample.py
lts-api/tests/ltsapi/managers/: test_auth.py  test_competitions.py  test_managers.py  test_parsers.py  test_participants.py  test_pits.py  test_strategy.py  test_timing.py  test_tracks.py
lts-api/tests/ltsapi/router/: test_auth.py  test_competitions.py  test_misc.py  test_participants.py  test_pits.py  test_strategy.py  test_timing.py  test_tracks.py
lts-pipeline/: .coveragerc  .env.local  README.md  pyproject.toml  tox.ini
lts-pipeline/src/ltspipe/: base.py  configs.py  enum.py  exceptions.py  messages.py  utils.py
lts-pipeline/src/ltspipe/api/: auth.py  competitions_base.py  handlers.py  participants.py  pits.py  strategy.py  timing.py
lts-pipeline/src/ltspipe/data/: actions.py  auth.py  base.py  competition.py  competitions.py  enum.py  notifications.py  strategy.py  time.py
lts-pipeline/src/ltspipe/parsers/: base.py  special.py  strategy.py  websocket.py
lts-pipeline/src/ltspipe/runners/: __init__.py
lts-pipeline/src/ltspipe/steps/: api.py  base.py  bulk.py  dummy.py  filesystem.py  kafka.py  listeners.py  loggers.py  mappers.py  modifiers.py  notifications.py  strategy.py  triggers.py  wrappers.py
lts-pipeline/tests/: conftest.py  fixtures.py  helpers.py
lts-pipeline/tests/data/messages/: display_driver_name.txt  endurance_display_driver_name_with_driving_time.txt  endurance_display_team_name.txt  endurance_ignore_1.txt  endurance_ignore_2.txt  endurance_pit_out.txt  endurance_stage_remaining_time_empty.txt  endurance_stage_remaining_time_text.txt  endurance_stage_remaining_time_unknown.txt  endurance_timing_best_time.txt  endurance_timing_driver_stint_time.txt  endurance_timing_lap.txt  endurance_timing_last_time.txt  endurance_timing_number_pits.txt  endurance_timing_pit_time_minutes.txt  endurance_timing_pit_time_seconds.txt  endurance_timing_position.txt  init_endurance_2.txt  init_qualy_1.txt  init_qualy_2.txt  init_qualy_with_times.txt  init_race.txt  initial_3_teams.txt  initial_3_teams_with_times.txt  pit_in.txt  stage_remaining_time.txt  status_finished.txt  status_paused.txt  status_started.txt  status_unknown.txt  wrong_headers.txt
lts-pipeline/tests/ltspipe/: test_configs.py  test_messages.py
lts-pipeline/tests/ltspipe/api/: test_all_api_calls.py
lts-pipeline/tests/ltspipe/data/: test_competitions.py  test_time.py
lts-pipeline/tests/ltspipe/parsers/: __init__.py  test_special.py  test_strategy.py  test_websocket.py
lts-pipeline/tests/ltspipe/steps/: test_api.py  test_bulk.py  test_dummy.py  test_filesystem.py  test_listeners.py  test_loggers.py  test_mappers.py  test_notifications.py  (+2 more)
lts-pipeline/tests/mocks/: kafka.py  logging.py  multiprocessing.py  requests.py  websocket.py
pyback-app/: mypy.ini  pyproject.toml  tox.ini
pyback-app/.github/workflows/: main.yaml
pyback-app/src/pyback/: configs.py  messages.py
pyback-app/tests/: conftest.py  fixtures.py
pyback-app/tests/pyback/: test_configs.py  test_messages.py
(+372 files in other folders)
