[tool.poetry]
name = "live-timing-strategy-api"
version = "0.1.0"
description = "Live timing strategy: API REST"
readme = "README.md"
authors = ["DimasDMM <@dimasdmm>"]
license = "MIT"
packages = [
    { include = "ltsapi", from = "src" }
]

[tool.poetry.dependencies]
fastapi = "0.103.2"
pydantic = "2.4.2"
python = "^3.10"
mysql-connector-python = "8.1.0"

[tool.poetry.group.test.dependencies]
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-commas = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-docstrings = "^1.6.0"
flake8-length = "^0.3.0"
flake8-print = "^4.0.1"
flake8-simplify = "^0.18.1"
flake8-unused-arguments = "^0.0.10"
flake8-use-fstring = "^1.3"
httpx = "^0.24.0"
mypy = "1.5.1"
pep8-naming = "^0.13.0"
pytest = "^7.0.1"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.4"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"
poethepoet = "^0.19.0"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.poe.tasks]
coverage = "pytest tests --cov src --cov-report term --cov-report=html:reports -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api:start"
