[tool.poetry]
name = "live-timing-pyback-cli"
version = "1.0.0"
description = "Live timing analysis"
authors = ["DimasDMM <@dimasdmm>"]
license = "MIT"
packages = [
    { include = "pyback", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
kafka-python = "^2.0.2"
crc32c = "^2.3.post0"
websocket-client = "^1.5.1"

[tool.poetry.group.test.dependencies]
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-commas = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-docstrings = "^1.6.0"
flake8-length = "^0.3.0"
flake8-print = "^4.0.1"
flake8-simplify = "^0.18.1"
flake8-unused-arguments = "^0.0.10"
flake8-use-fstring = "^1.3"
mypy = "^0.971"
pep8-naming = "^0.13.0"
pytest = "^7.0.1"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.4"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"


[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.0"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
